# rdkit_learn

./: LICENSE  README.md  pyproject.toml
scripts/examples/: aromaticity.py
src/cheminf_kit/: __init__.py  functions.py
